# vinyl-effects

./: README.md  dependencies.Makefile  out.bak  stack.yaml  vinyl-effects.cabal
benchmarks/: Bench.hs
executables/: Main.hs
sources/Vinyl/: CoRec.hs  Effects.hs
sources/Vinyl/Effects/: Example.hs  Extra.hs  Interpreter.hs  Language.hs  Main.hs  Types.hs
sources/Vinyl/Effects/Interpreter/: Cofree.hs  Simple.hs
tests/: DocTest.hs
tests/Effects/: Test.hs
