name:                vinyl-effects
version:             0.0.0
synopsis:            TODO
description:         TODO
homepage:            http://github.com/sboosali/vinyl-effects#readme
license:             BSD3
license-file:        LICENSE
author:              Spiros Boosalis
maintainer:          samboosalis@gmail.com
copyright:           2016 Spiros Boosalis
category:            TODO
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/sboosali/vinyl-effects


library
 hs-source-dirs:      sources
 default-language:    Haskell2010
 ghc-options:         -Wall -fno-warn-unticked-promoted-constructors
 default-extensions: AutoDeriveTypeable DeriveDataTypeable DeriveGeneric
                     DeriveFunctor DeriveFoldable DeriveTraversable
                     LambdaCase EmptyCase TypeOperators PostfixOperators
                     ViewPatterns BangPatterns KindSignatures
                     NamedFieldPuns RecordWildCards TupleSections
                     MultiWayIf DoAndIfThenElse EmptyDataDecls
                     MultiParamTypeClasses FlexibleContexts FlexibleInstances
                     TypeFamilies FunctionalDependencies
                     ScopedTypeVariables StandaloneDeriving

 exposed-modules:
  Vinyl.Effects
  Vinyl.Effects.Types
  Vinyl.Effects.Language
  Vinyl.Effects.Interpreter
  Vinyl.Effects.Interpreter.Simple
  Vinyl.Effects.Interpreter.Cofree

  Vinyl.Effects.Example
  Vinyl.Effects.Extra

 build-depends:
    base >=4.7 && <5

  , vinyl
  , vinyl-sum

  , free

  , process
  -- TODO, mv to executable


-- $ stack build && stack exec example-vinyl-effects
executable example-vinyl-effects
 hs-source-dirs:      executables
 main-is:             Main.hs

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , vinyl-effects


-- $ stack test doctest
test-suite doctest
 hs-source-dirs:      tests
 main-is:             DocTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , vinyl-effects
  , doctest


-- $ stack test unittest
test-suite unittest
 hs-source-dirs:      tests
 main-is:             UnitTest.hs
 type:                exitcode-stdio-1.0

 default-language:    Haskell2010
 ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

 other-modules:
  Effects.Test

 build-depends:
    base
  , vinyl-effects
  , hspec ==2.2.*
  , QuickCheck ==2.8.*
  -- , tasty
  -- , tasty-quickcheck


-- $ stack bench
benchmark command
 hs-source-dirs:      benchmarks
 main-is:             Bench.hs
 type:                exitcode-stdio-1.0

 default-language: Haskell2010
 ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

 build-depends:
    base
  , vinyl-effects
  , criterion
  , deepseq
